--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "web-push": "^3.5.0"
   }
 }
