Successful Google Calendar integration

--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ GROQ_API_KEY=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
 
 # Server Configuration
 PUSH_SERVER_PORT=3002
+# Google Calendar OAuth Configuration
+# Get credentials from: https://console.cloud.google.com/
+# Create OAuth 2.0 credentials (Web application)
+# Authorized redirect URIs: http://localhost:3002/auth/google/callback
+GOOGLE_CLIENT_ID=1043757512906-0fe7d4gamq3ktl9672t4fepo9ctvf5bs.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:3002/auth/google/callback
