--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^118.0.0",
     "groq-sdk": "^0.37.0",
     "node-cron": "^3.0.2",
     "openai": "^4.52.0",
