--- a/.env
+++ b/.env
@@ -10,7 +10,10 @@ PUSH_SERVER_PORT=3002
 # Google Calendar OAuth Configuration
 # Get credentials from: https://console.cloud.google.com/
 # Create OAuth 2.0 credentials (Web application)
-# Authorized redirect URIs: http://localhost:3002/auth/google/callback
+# Authorized redirect URIs (add all to Google Cloud Console):
+#  - http://localhost:3002/auth/google/callback
+#  - https://sensationistic-taunya-palingenesian.ngrok-free.dev/auth/google/callback
+#  - https://tmr-1.onrender.com/auth/google/callback
 GOOGLE_CLIENT_ID=1043757512906-0fe7d4gamq3ktl9672t4fepo9ctvf5bs.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://localhost:3002/auth/google/callback
