Fix: Rebuild native modules on Render for sqlite3 compatibility
- Updated root package.json with npm rebuild in postinstall and build scripts
- Updated server/index.js to prioritize process.env.PORT for Render compatibility
- Added .npmrc with build-from-source flag to force Linux compilation of sqlite3

This ensures sqlite3 native bindings are compiled for Linux on Render,
not using Windows binaries from local development.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "cd server && npm start",
-    "postinstall": "cd server && npm install"
+    "build": "cd server && npm install && npm rebuild",
+    "postinstall": "cd server && npm install && npm rebuild"
   },
   "engines": {
     "node": ">=14.0.0"
